update PersistenceControllerTest, checksum is by default created when calling init. therefore we delete it at the start of all the tests.